// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-3 {
  color: #3722ed !important;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 test fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-1 {
  background-color: red;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.circle.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.sizes.default should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.sizes.large should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 100px;
  height: 100px;
  font-size: 48px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.sizes.medium should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 80px;
  height: 80px;
  font-size: 36px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`overrides Avatar.sizes.small should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 40px;
  height: 40px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly for initials 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  max-width: 100%;
}

.emotion-2 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  background-color: #3722ed;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
>
  JM
</div>
`;

exports[`props should render correctly for size default 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly for size large 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 100px;
  height: 100px;
  font-size: 48px;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly for size medium 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 80px;
  height: 80px;
  font-size: 36px;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly for size small 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 40px;
  height: 40px;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-3 {
  background-color: red !important;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`props should render correctly with kind circle 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<img
  alt="Bean"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-1 {
  background-color: red;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.circle.base should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.sizes.default should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 60px;
  height: 60px;
  font-size: 24px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.sizes.large should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 100px;
  height: 100px;
  font-size: 48px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.sizes.medium should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 80px;
  height: 80px;
  font-size: 36px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;

exports[`theming Avatar.sizes.small should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  width: 60px;
  height: 60px;
  overflow: hidden;
  object-fit: cover;
  width: 40px;
  height: 40px;
}

.emotion-0 {
  background-color: red;
}

<img
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Avatar"
  src="test.png"
/>
`;
